Fixed Contact Info and Alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -473,23 +473,31 @@ section {
 }
 
 .experiance {
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
+
+  padding-top: 30px;
 }
 
 .contact-content-con {
-  display: flex;
+
+  align-items: center;
+  text-align: center;
+  justify-content: center;
   padding-top: 3.5rem;
+
+  margin: 0 auto 0 auto;
+  position: relative;
+  width: 500px;
 }
-.contact-content-con .left-contact {
-  flex: 2;
-}
+
 .contact-content-con .left-contact h4 {
   margin-top: 1rem;
   font-size: 2rem;
   text-transform: uppercase;
 }
+
 .contact-content-con .left-contact p {
   margin: 1rem 0;
   line-height: 2rem;
@@ -541,36 +549,7 @@ section {
   justify-content: center;
   font-size: 1.3rem;
 }
-.contact-content-con .right-contact {
-  flex: 3;
-  margin-left: 3rem;
-}
-.contact-content-con .right-contact .input-control {
-  margin: 1.5rem 0;
-}
-.contact-content-con .right-contact .input-control input, .contact-content-con .right-contact .input-control textarea {
-  border-radius: 30px;
-  font-weight: inherit;
-  font-size: inherit;
-  font-family: inherit;
-  padding: 0.8rem 1.1rem;
-  outline: none;
-  border: none;
-  background-color: var(--color-grey-5);
-  width: 100%;
-  color: var(--color-white);
-  resize: none;
-}
-.contact-content-con .right-contact .i-c-2 {
-  display: flex;
-}
-.contact-content-con .right-contact .i-c-2 :last-child {
-  margin-left: 1.5rem;
-}
-.contact-content-con .right-contact .submit-btn {
-  display: flex;
-  justify-content: flex-start;
-}
+
 
 /*Independed components*/
 
@@ -613,14 +592,12 @@ section {
   align-items: center;
   text-align: center;
   box-shadow: var(--box-shadow-1);
-
-  margin: auto;
 }
 
 .experiance-description-circle {
   background-color: var(--color-grey-4);
-  width: 800px;
-  height: 800px;
+  aspect-ratio: 1 / 1;
+  height: 100%;
   border-radius: 50%;
 
   position: absolute;
@@ -661,11 +638,6 @@ section {
   -webkit-transition: opacity 0.75s;
 
   
-}
-
-.experiance-show {
-  opacity: 100%;
-  display: flex;
 }
 
 .btn-con {
